# fost-meta

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jamroot  README.md  README.txt  build  build.cmd  compile  resnap  snap.md  stable-lib  svn-co  update  update.cmd
.circleci/: config.yml
Docs/: Jamfile
docker/: README.md  all.dockerfile  base-images  bases  build-boost  builder.dockerfile  circleci.dockerfile  fostgres  rebuild  runtime.dockerfile
docker/fost-builder/: Dockerfile
docker/fost-builder-trusty/: Dockerfile
docker/fost-runtime/: Dockerfile
docker/fost-runtime-trusty/: Dockerfile
docker/mengmom/: Dockerfile
docker/minit/: Dockerfile  minit.c
docker/minit-restart/: Dockerfile
docker/runtime/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu-updated/: Dockerfile
fost-meta/: ChangeLog  Jamroot  compile  compile.cmd
fost-meta/Docs/: Jamfile  index.hpp
rc/: Jamroot
snap/: snapcraft.yaml
