cmake_minimum_required(VERSION 3.6)
project(fost-meta)

enable_testing()
add_custom_target(check)
add_custom_target(pgtest)
add_custom_target(stress)

# These contain targets and functions needed elsewhere
add_subdirectory(cord)
add_subdirectory(fost-base)
add_subdirectory(fost-base/Examples)

add_subdirectory(Boost)
add_subdirectory(crypto++)
add_subdirectory(fost-aws)
add_subdirectory(fost-aws/Examples)
add_subdirectory(fost-beanbag)
add_subdirectory(fost-internet)
add_subdirectory(fost-internet/Examples)
add_subdirectory(fost-postgres)
add_subdirectory(fost-web)
add_subdirectory(fost-wright)
add_subdirectory(fostgres)
add_subdirectory(json-schema)
add_subdirectory(mdca-platform/mdca-common)
add_subdirectory(mdca-platform/mdca-simulator)
add_subdirectory(odin)
add_subdirectory(pgasio)
add_subdirectory(threading)

if(USE_TAMARIND_LIBRARY)
    add_subdirectory(makham)
    add_subdirectory(makham/examples)
    add_subdirectory(tamarind)
endif()

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(libpqxx)
